--- a/foodieMRT/package.json
+++ b/foodieMRT/package.json
@@ -29,6 +29,8 @@
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.6",
     "vitest": "^0.33.0",
     "vue-tsc": "^1.8.6"
